<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela2_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gabriel.lucas.com.projetofinal5.Tela2Cadastro"
    android:background="@drawable/fundometalico">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/ts_nome"
            android:ems="10"
            android:id="@+id/ts_nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/ts_endereco"
            android:ems="10"
            android:id="@+id/ts_endereco" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/ts_fone"
            android:ems="10"
            android:id="@+id/ts_fone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ts_cpf"
            android:ems="10"
            android:id="@+id/ts_cpf" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ts_email"
            android:ems="10"
            android:id="@+id/ts_email" />

        <Button
            android:text="@string/ts_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ts_btn" />

        <!--<Button
            android:text="Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fuck" />-->

    </LinearLayout>
</RelativeLayout>
