<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alterar_agora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gabriel.lucas.com.projetofinal5.AlterarAgora"
    android:background="@drawable/fundometalico">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <!--Desculpa ta bugado o Color e os Strings-->
        <TextView
            android:text="@string/tl_funcionario"
            android:textColor="@color/preto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <TextView
            android:text="TextView"
            android:textColor="@color/preto"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fixo_nome" />

       <!-- <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/ts_nome"
            android:ems="10"
            android:id="@+id/alterar_nome" />-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/ts_endereco"
            android:ems="10"
            android:id="@+id/alterar_endereco" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/ts_fone"
            android:id="@+id/alterar_fone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/ts_cpf"
            android:id="@+id/alterar_cpf" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/ts_email"
            android:id="@+id/alterar_email" />

        <Button
            android:text="@string/ts_alterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alterar_btn" />

        <Button
            android:text="@string/ts_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alterar_voltar" />
    </LinearLayout>
</RelativeLayout>
