<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_principal_botao_locais"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gabriel.lucas.com.projetofinal5.TelaPrincipalBotaoLocais"
    android:background="@drawable/fundometalico">


    <TextView
        android:text="@string/tp_titulo"
        android:textAlignment="center"
        android:textSize="@dimen/tp_titulo_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tp_titulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tp_msg"
        android:textAlignment="center"
        android:textSize="@dimen/txt_size_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tp_msg"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_btn_msg" />

    <Button
        android:text="@string/tp_btn"
        android:textSize="@dimen/txt_size_btn_cadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tp_btn"
        android:layout_marginBottom="@dimen/margin_btn_cadas"
        android:layout_above="@+id/tp_msg"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/tp_btn_cadastrados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tp_msg"
        android:layout_marginBottom="@dimen/margin_btn_cadastrados"
        android:id="@+id/tp_btn_cadastrados" />


</RelativeLayout>
