<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gabriel.lucas.com.projetofinal5.TelaListView"
    android:background="@drawable/fundometalico">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tlv_titulo"
            android:textAlignment="center"
            android:textSize="@dimen/lv_txt_titulo_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tlv_titulo" />

        <TextView
            android:text="@string/tlv_detalhes"
            android:textSize="@dimen/lv_txt_subtitulo_size"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlv_detalhes" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="391dp"
            android:id="@+id/tela_lv"
            android:background="@drawable/borda_list"/>

        <Button
            android:text="@string/tlv_novofuncionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvl_newfunc" />
    </LinearLayout>

</RelativeLayout>
